--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,5 @@
 body, html {
-    background-color: #0f0f0f;
+    background-color: white;
     padding: 0px;
     margin: 0px;
     min-height: 100vh;
